FINERACT-2326: Backward compatibility with JDK17