@@ -5254,7 +5254,7 @@ public class LoanStepDef extends AbstractStepDef {
         ErrorResponse errorDetails = ErrorResponse.from(modifyLoanApprovedAmountResponse);
         assertThat(errorDetails.getHttpStatusCode()).isEqualTo(403);
 
-        Object errorArgs = errorDetails.getErrors().getFirst().getArgs().getFirst().getValue();
+        Object errorArgs = errorDetails.getErrors().get(0).getArgs().get(0).getValue();
         String developerMessage;
         if (errorArgs instanceof Map errorArgsMap) {
             developerMessage = (String) errorArgsMap.get("developerMessage");
@@ -5280,7 +5280,7 @@ public class LoanStepDef extends AbstractStepDef {
         ErrorResponse errorDetails = ErrorResponse.from(modifyLoanApprovedAmountResponse);
         assertThat(errorDetails.getHttpStatusCode()).isEqualTo(403);
 
-        Object errorArgs = errorDetails.getErrors().getFirst().getArgs().getFirst().getValue();
+        Object errorArgs = errorDetails.getErrors().get(0).getArgs().get(0).getValue();
         String developerMessage;
         if (errorArgs instanceof Map errorArgsMap) {
             developerMessage = (String) errorArgsMap.get("developerMessage");
@@ -5307,7 +5307,7 @@ public class LoanStepDef extends AbstractStepDef {
         ErrorResponse errorDetails = ErrorResponse.from(modifyLoanApprovedAmountResponse);
         assertThat(errorDetails.getHttpStatusCode()).isEqualTo(403);
 
-        Object errorArgs = errorDetails.getErrors().getFirst().getArgs().getFirst().getValue();
+        Object errorArgs = errorDetails.getErrors().get(0).getArgs().get(0).getValue();
         String developerMessage;
         if (errorArgs instanceof Map errorArgsMap) {
             developerMessage = (String) errorArgsMap.get("developerMessage");
@@ -5367,7 +5367,7 @@ public class LoanStepDef extends AbstractStepDef {
         ErrorResponse errorDetails = ErrorResponse.from(modifyLoanAvailableDisbursementAmountResponse);
         assertThat(errorDetails.getHttpStatusCode()).isEqualTo(403);
 
-        Object errorArgs = errorDetails.getErrors().getFirst().getArgs().getFirst().getValue();
+        Object errorArgs = errorDetails.getErrors().get(0).getArgs().get(0).getValue();
         String developerMessage;
         if (errorArgs instanceof Map errorArgsMap) {
             developerMessage = (String) errorArgsMap.get("developerMessage");
@@ -5393,7 +5393,7 @@ public class LoanStepDef extends AbstractStepDef {
         ErrorResponse errorDetails = ErrorResponse.from(modifyLoanAvailableDisbursementAmountResponse);
         assertThat(errorDetails.getHttpStatusCode()).isEqualTo(403);
 
-        Object errorArgs = errorDetails.getErrors().getFirst().getArgs().getFirst().getValue();
+        Object errorArgs = errorDetails.getErrors().get(0).getArgs().get(0).getValue();
         String developerMessage;
         if (errorArgs instanceof Map errorArgsMap) {
             developerMessage = (String) errorArgsMap.get("developerMessage");
